--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    padding: 10;
 }
 body{
     background-color:#4aaaa5;
@@ -11,12 +10,15 @@ body{
     color:#ffffff;
     font-family: "Georgia", Times, Times New Roman, serif;
     float:left;
+    position: fixed;
+    left: 70px;
+    padding: 7px;
 }
 
 .links{
     float: right;
     list-style: none;
-    
+    padding-top: 15px;
 }
 
 .links li a{
@@ -37,7 +39,7 @@ body{
 
 .row{
     background-color:#ffffff;
-    border-color:#cccccc;
+    border-bottom: 5px solid #cccccc;
     height: 50px;
 }
 
@@ -45,11 +47,13 @@ body{
 .info{
     color:#777777;
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    padding: 20px;
 }
 
 
 #placeholder{
     float:left;
+    padding: 20px;
 }
 
 #about{
@@ -57,15 +61,30 @@ body{
     font-family: "Georgia", Times, Times New Roman, serif;
     clear:both;
     overflow: auto;
+    padding: 20px;
+    margin: 20px;
+    border-bottom: 5px solid #dddddd;
 }
 
-footer{
-    background:#666666;
+#footer{
+    background-color:#666666;
     clear:both;
+    color:white;
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    border-top: 5px solid #4aaaa5;
 }
 
 .trying{
     background:#ffffff;
     border-color:#dddddd;
-    height: 300px;
+    height: 400px;
+    margin: 70px;
+    padding: 10px;
+    border-style: solid;
+    border-width: 5px;
 }
